# STOPS

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  contribute.md  cross_corr.py  cross_correlate.py  deprecated.py  diagrams.md  join.py  pyproject.toml  requirements.txt  skylines.py  specpolpy3.py  split.py  transform-and-skyline-extraction.ipynb  wav_replacement.py
src/STOPS/: __init__.py  __main__.py  cross_correlate.py  join.py  skylines.py  split.py
src/STOPS/utils/: Constants.py  ParserUtils.py  STOPS.mplstyle  STOPS_correlate.mplstyle  STOPS_skylines.mplstyle  SharedUtils.py  specpolpy3.py
src/STOPS/utils/RSS_arc_files/: README.txt
utils/: Constants.py  ParserUtils.py  STOPS.mplstyle  STOPS_skylines.mplstyle  SharedUtils.py  specpolpy3.py
utils/RSS_arc_files/: NeAr.txt
