[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "STOPS"
description = "Supplementary Tools for POLSALT Spectropolarimetry"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
license = {file = "LICENSE"}
authors = [
    {name = "Justin Cooper", email = "justin.jb78+Masters@gmail.com"}
]
maintainers = [
    {name = "Justin Cooper", email = "justin.jb78+Masters@gmail.com"}
]
# Found using `vermin`
requires-python = ">=3.10"

# Found dynamically
dynamic = ["version", "dependencies"]

keywords = [
    "astronomy",
    "spectropolarimetry",
    "tools"
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",

    # Intended Usage
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",

    # License
    "License :: OSI Approved :: BSD License",

    # Doc Language
    "Natural Language :: English",

    # Environments
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    # Stop PyPI Upload
    "Private :: Do Not Upload"
]

[project.urls]
Homepage = "https://github.com/JustinotherGitter/STOPS"
Repository = "https://github.com/JustinotherGitter/STOPS.git"
# Documentation = "https://github.com/JustinotherGitter/STOPS/wiki"

[project.scripts]
stops = "STOPS.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest >= 6.0"
]
# gui or cli or dev = [
#     "sphinx",
#     "black",
#     "flake8",
#     etc.
# ]
dev = [
    # "sphinx",
    "black",
    "flake8",
    "mypy",
    "isort",
]

# [tool]
# [tool.setuptools]
# Default is true
# include-package-data = true

[tool.setuptools.package-data]
"STOPS.data" = ["*.salt"]
"STOPS.data.RSS_arc" = ["*.txt"]
"STOPS.utils" = ["*.mplstyle"]

[tool.setuptools.dynamic]
# Found in __init__.py
version = {attr = "STOPS.__version__"}
# Found using `pipreqs`
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
